fix debug issue

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,9 +1,26 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ABCSchool;Integrated Security=True;Encrypt=False;TrustServerCertificate=False;MultipleActiveResultSets=True;"
+    },
+    "JwtSettings": {
+        "Secret": "AFKJBKSF76437KJGSDBKJDFSBKDJSBKDSBDB",
+        "TokenExpiryTimeInMinutes": 60,
+        "RefreshTokenExpiryTimeInDays": 7
+    },
+    "SwaggerSettings": {
+        "Title": ".Net 9.0 WebAPI - ABC School",
+        "Description": "ABC School is an Awesome web api",
+        "ContactName": "Hassan Muwonge",
+        "ContactEmail": "hassansaava@gmail.com",
+        "ContactUrl": "",
+        "LicenseName": "MIT License",
+        "LicenseUrl": ""
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
