update: implemented user services and user service CRud and extra features"

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -18,8 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Identity\Roles\Commands\" />
-    <Folder Include="Features\Identity\Roles\Queries\" />
+    <Folder Include="Features\Identity\Users\Commands\" />
+    <Folder Include="Features\Identity\Users\Queries\" />
   </ItemGroup>
 
 </Project>
