update: implemented user and role crud and features operations

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -8,8 +8,8 @@
         "RefreshTokenExpiryTimeInDays": 7
     },
     "SwaggerSettings": {
-        "Title": ".Net 9.0 WebAPI - ABC School",
-        "Description": "ABC School is an Awesome web api",
+        "Title": ".Net 9.0 WebAPI - Smart School",
+        "Description": "Smart School is an Awesome Multi-Tenant web api",
         "ContactName": "Hassan Muwonge",
         "ContactEmail": "hassansaava@gmail.com",
         "ContactUrl": "",
